@@ -1732,13 +1732,10 @@ d_write(char *arg)
             }
           else
             {
-              fprintf(stderr, MSG_GEN_WROTE, datafile,
-                  (double) g_act_1.bw / 1024.0,
-                  (long long unsigned int) g_act_1.rw);
+              OPLOG_OUTPUT_NSTATS(datafile, g_act_1)
             }
 #else
-          fprintf(stderr, MSG_GEN_WROTE, datafile, (double) g_act_1.bw / 1024.0,
-              (long long unsigned int) g_act_1.rw);
+          OPLOG_OUTPUT_NSTATS(datafile, g_act_1)
 #endif
         }
     }
